💄 style: Fix gap 8px not applying in form

--- a/css/components/task.css
+++ b/css/components/task.css
@@ -29,6 +29,10 @@
   color: var(--text-strong);
 }
 
+.task-form-content {
+  gap: 8px;
+}
+
 .task-textarea {
   height: 20px;
   overflow-y: hidden;
